VERY basic framework

--- a/metachangelog.html
+++ b/metachangelog.html
@@ -10,6 +10,8 @@
           <li class="nav-item"><a href="changelog.html">Changelog</a></li>
           <li class="nav-item"><a href="metachangelog.html">Meta Changelog</a></li>
         </ul>
-        Home sweet home
+        Meta Changelog:
+          v0.2214062003
+            - Bare bones framework
     </body>
 </html>
