--- a/changelog.html
+++ b/changelog.html
@@ -10,6 +10,7 @@
           <li class="nav-item"><a href="changelog.html">Changelog</a></li>
           <li class="nav-item"><a href="metachangelog.html">Meta Changelog</a></li>
         </ul>
-        Home sweet home
+        Changelog:
+          something
     </body>
 </html>
