--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello Again</title>
+      <title>Idle Spiral Info Repo</title>
     </head>
     <body>
       <nav>
