--- a/metachangelog.html
+++ b/metachangelog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello Again</title>
+      <title>Idle Spiral Info Repo</title>
     </head>
     <body>
       <nav>
@@ -11,7 +11,9 @@
           <li class="nav-item"><a href="metachangelog.html">Meta Changelog</a></li>
         </ul>
         Meta Changelog:
-          v0.2214062003
+          v0.2206142003
             - Bare bones framework
+          v0.2206150111
+            - Added save decryption
     </body>
 </html>
