--- a/metachangelog.html
+++ b/metachangelog.html
@@ -15,5 +15,7 @@
             - Bare bones framework
           v0.2206150111
             - Added save decryption
+          v0.2206150140
+            - Added initial table dump
     </body>
 </html>
