--- a/metachangelog.html
+++ b/metachangelog.html
@@ -17,5 +17,7 @@
             - Added save decryption
           v0.2206150140
             - Added initial table dump
+          v0.2206151154
+            - Reconstructing UpgradeContainer
     </body>
 </html>
