--- a/changelog.html
+++ b/changelog.html
@@ -11,6 +11,7 @@
           <li class="nav-item"><a href="metachangelog.html">Meta Changelog</a></li>
         </ul>
         Changelog:
-          something
+          v1.5.0:
+            - Initial version to be tracked; might work backwards at some point
     </body>
 </html>
