--- a/metachangelog.html
+++ b/metachangelog.html
@@ -19,5 +19,7 @@
             - Added initial table dump
           v0.2206151154
             - Reconstructing UpgradeContainer
+          v0.22061511238
+            - Reconstructing BattleRewardContainer
     </body>
 </html>
